--- a/src/styles/base/_typo.scss
+++ b/src/styles/base/_typo.scss
@@ -11,60 +11,6 @@
 }
 
 @include font("Gilroy-Thin", "/Typo/Gilroy/Gilroy-Thin", 100);
-@include font("Gilroy-ThinItalic", "/Typo/Gilroy/Gilroy-ThinItalic", 100);
-@include font("Gilroy-UltraLight", "/Typo/Gilroy/Gilroy-UltraLight", 200);
-@include font(
-  "Gilroy-UltraLightItalic",
-  "/Typo/Gilroy/Gilroy-UltraLightItalic",
-  200
-);
-@include font("Gilroy-Light", "/Typo/Gilroy/Gilroy-Light", 300);
-@include font("Gilroy-LightItalic", "/Typo/Gilroy/Gilroy-LightItalic", 300);
-@include font("Gilroy-Regular", "/Typo/Gilroy/Gilroy-Regular", 400);
-@include font("Gilroy-RegularItalic", "/Typo/Gilroy/Gilroy-RegularItalic", 400);
-@include font("Gilroy-Medium", "/Typo/Gilroy/Gilroy-Medium", 500);
-@include font("Gilroy-MediumItalic", "/Typo/Gilroy/Gilroy-MediumItalic", 500);
-@include font("Gilroy-SemiBold", "/Typo/Gilroy/Gilroy-SemiBold", 600);
-@include font(
-  "Gilroy-SemiBoldItalic",
-  "/Typo/Gilroy/Gilroy-SemiBoldItalic",
-  600
-);
-@include font("Gilroy-Bold", "/Typo/Gilroy/Gilroy-Bold", 700);
-@include font("Gilroy-BoldItalic", "/Typo/Gilroy/Gilroy-BoldItalic", 700);
-@include font("Gilroy-ExtraBold", "/Typo/Gilroy/Gilroy-ExtraBold", 800);
-@include font(
-  "Gilroy-ExtraBoldItalic",
-  "/Typo/Gilroy/Gilroy-ExtraBoldItalic",
-  800
-);
-@include font("Gilroy-Black", "/Typo/Gilroy/Gilroy-Black", 900);
-@include font("Gilroy-BlackItalic", "/Typo/Gilroy/Gilroy-BlackItalic", 900);
-@include font("Gilroy-Heavy", "/Typo/Gilroy/Gilroy-Heavy", bold);
-@include font("Gilroy-HeavyItalic", "/Typo/Gilroy/Gilroy-HeavyItalic", bold);
-
-@include font("Roboto-Thin", "/Typo/Roboto/Roboto-Thin", 100);
-@include font("Roboto-ThinItalic", "/Typo/Roboto/Roboto-ThinItalic", 100);
-@include font("Roboto-ExtraLight", "/Typo/Roboto/Roboto-ExtraLight", 200);
-@include font(
-  "Roboto-ExtraLightItalic",
-  "/Typo/Roboto/Roboto-ExtraLightItalic",
-  200
-);
-@include font("Roboto-Light", "/Typo/Roboto/Roboto-Light", 300);
-@include font("Roboto-LightItalic", "/Typo/Roboto/Roboto-LightItalic", 300);
-@include font("Roboto-Regular", "/Typo/Roboto/Roboto-Regular", 400);
-@include font("Roboto-Italic", "/Typo/Roboto/Roboto-Italic", 400);
-@include font("Roboto-Medium", "/Typo/Roboto/Roboto-Medium", 500);
-@include font("Roboto-MediumItalic", "/Typo/Roboto/Roboto-MediumItalic", 500);
-@include font("Roboto-SemiBold", "/Typo/Roboto/Roboto-SemiBold", 700);
-@include font(
-  "Roboto-SemiBoldItalic",
-  "/Typo/Roboto/Roboto-SemiBoldItalic",
-  700
-);
-@include font("Roboto-Bold", "/Typo/Roboto/Roboto-Bold", bold);
-@include font("Roboto-BoldItalic", "/Typo/Roboto/Roboto-BoldItalic", bold);
 
 body {
   font-family: Gilroy-Medium, sans-serif;
@@ -76,13 +22,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Gilroy-Bold";
-  color: $color-darkblue;
-  line-height: 100%;
+  font-family: "MillerDisplay";
+  color: #183b56;
 }
 
 h1 {
-  font-size: 54px;
+  font-size: 42px;
 }
 
 h2 {
@@ -98,34 +43,38 @@ h4 {
 }
 
 h5 {
-  font-size: 16px;
+  font-size: 17px;
 }
 
 h6 {
-  font-size: 14px;
+  font-size: 15px;
 }
 
 // font-size
 
-.heading-xxl {
+.text-2xl {
   font-size: 64px;
 }
 
-.heading-sm {
+.text-xl {
+  font-size: 64px;
+}
+
+.text-sm {
   font-size: 12px;
 }
 
-.heading-xs {
+.text-xs {
   font-size: 10px;
 }
 
-.heading-xxs {
+.text-xxs {
   font-size: 9px;
 }
 
 p {
   font-size: 16px;
-  font-family: Roboto-Light, sans-serif;
+  font-family: "Roboto-Light", sans-serif;
   color: $color-darkblue;
 }
 
@@ -151,39 +100,4 @@ p {
 
 .text-uppercase {
   text-transform: uppercase !important;
-}
-
-// font-family
-
-.gilroy-medium {
-  font-family: Gilroy-Medium !important;
-}
-
-.gilroy-regular {
-  font-family: Gilroy-Medium !important;
-}
-
-.gilroy-bold {
-  font-family: Gilroy-Bold !important;
-}
-
-.gilroy-semibold {
-  font-family: Gilroy-SemiBold !important;
-}
-
-.gilroy-light {
-  font-family: Gilroy-Light !important;
-}
-
-.roboto-medium {
-  font-family: Roboto-Medium !important;
-}
-
-.roboto-light {
-  font-family: Roboto-Light !important;
-}
-
-a {
-  font-family: Gilroy-SemiBold, sans-serif;
-  font-weight: normal;
 }
