--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -296,13 +296,19 @@
 .blog-card {
   box-sizing: border-box;
   max-width: 352px;
+  height: 100%;
   border: 1px solid #e5eaf4;
   border-radius: 8px;
   background-color: #ffffff;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
 
   .blog-cover {
+    border-radius: 8px 8px 0 0;
     min-height: 230px;
+    img {
+      border-radius: 8px 8px 0 0;
+      width: 100%;
+    }
   }
 
   .blog-summary {
@@ -335,7 +341,8 @@
     }
 
     p {
-      max-height: 61px;
+      max-height: 56px;
+      overflow: hidden;
       color: #5a7184;
       font-family: "DM Sans";
       font-size: 15px;
