add assets, homepage

--- a/src/styles/base/_typo.scss
+++ b/src/styles/base/_typo.scss
@@ -22,6 +22,7 @@ h3,
 h4,
 h5,
 h6 {
+  margin-top: 0;
   font-family: "MillerDisplay";
   color: #183b56;
 }
@@ -73,6 +74,7 @@ h6 {
 }
 
 p {
+  margin-top: 0;
   font-size: 16px;
   font-family: "Roboto-Light", sans-serif;
   color: $color-darkblue;
