--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   min-height: 640px;
+  background-image: url("../assets/Banners/hero1.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 100% auto;
+
   .container {
     height: 100%;
     .text-block {
@@ -20,159 +25,125 @@
         }
       }
     }
-    .request-call-form-block {
-      padding: 38px 30px;
-      max-width: 523px;
-      border-radius: 8px;
-      background-color: #ffffff;
-      box-shadow: 0 15px 50px -10px rgba(21, 37, 72, 0.25);
-      h3 {
-        margin-bottom: 16px;
-        color: #183b56;
-        font-family: MillerDisplaySemiBold;
-        font-size: 28px;
-        font-weight: bold;
-        letter-spacing: 0;
-        line-height: 32px;
-      }
-      > div {
-        margin-bottom: 20px;
-        input {
-          width: calc(50% - 5px);
-        }
-      }
-      .btn-primary {
-        width: 100%;
-        height: 56px;
-      }
-    }
   }
 }
 
-.home-feature-network {
-  padding: 100px 0;
-  .container {
+.home-certifications {
+  padding: 56px 0 60px;
+  &__logo {
     display: flex;
-    flex-direction: column;
-    span {
-      margin: 0 auto 30px;
-    }
-
-    .badge {
-      padding: 9px 16px;
-      border-radius: 16px;
-      background-color: #fcce81;
-      color: #efa226;
-      font-family: "DM Sans";
-      font-size: 14px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
-      text-align: center;
-    }
-
-    h2 {
-      margin: 0 auto 60px;
-      text-align: center;
-    }
-
-    .feature-item {
-      h4 {
-        color: #183b56;
-        font-family: "DM Sans";
-        font-size: 20px;
-        font-weight: bold;
-        letter-spacing: 0;
-        line-height: 36px;
-        text-align: center;
-      }
-      p {
-        margin: auto;
-        max-width: 275px;
-        color: #5a7184;
-        font-family: "DM Sans";
-        font-size: 15px;
-        font-weight: 500;
-        letter-spacing: 0;
-        line-height: 24px;
-        text-align: center;
-      }
-    }
+    align-items: center;
   }
-}
-
-.home-feature-centers {
-  padding: 100px 0;
-  background-color: #f9f9f9;
-
   .container {
-    display: flex;
-    flex-direction: column;
-
-    span {
-      margin: 0 auto 30px;
-    }
-
-    .badge {
-      padding: 9px 16px;
-      border-radius: 16px;
-      background-color: #fcce81;
-      color: #efa226;
-      font-family: "DM Sans";
-      font-size: 14px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
-      text-align: center;
-    }
-
-    h2 {
-      margin: 0 auto 53px;
-      text-align: center;
-    }
-  }
-}
-
-.home-feature-blogs {
-  padding: 100px 0;
-  background-color: #f9f9f9;
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    span {
-      margin: 0 auto 30px;
-    }
-
-    .badge {
-      padding: 9px 16px;
-      border-radius: 16px;
-      background-color: #fcce81;
-      color: #efa226;
-      font-family: "DM Sans";
-      font-size: 14px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
-      text-align: center;
-    }
-
-    h2 {
-      margin: 0 auto 25px;
-      text-align: center;
-    }
-
-    > p {
-      margin: 0 auto 60px;
-      max-width: 560px;
+    h5 {
+      margin-bottom: 28px;
       color: #5a7184;
       font-family: "DM Sans";
       font-size: 16px;
       font-weight: 500;
       letter-spacing: 0;
-      line-height: 26px;
+      line-height: 32px;
       text-align: center;
     }
+    > div {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
+
+.home-feature {
+  padding: 100px 0;
+  text-align: center;
+
+  &__item {
+    h4 {
+      margin: 0 auto 18px;
+      color: #183b56;
+      font-family: "DM Sans";
+      font-size: 20px;
+      font-weight: bold;
+      letter-spacing: 0;
+      line-height: 36px;
+      text-align: center;
+    }
+    p {
+      margin: auto;
+      max-width: 275px;
+      color: #5a7184;
+      font-family: "DM Sans";
+      font-size: 15px;
+      font-weight: 500;
+      letter-spacing: 0;
+      line-height: 24px;
+      text-align: center;
+    }
+  }
+
+  &__icon {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fef0d8;
+    border-radius: 50%;
+  }
+
+  &--network {
+    padding-bottom: 120px;
+    .container {
+      span {
+        margin: 0 auto 30px;
+      }
+      h2 {
+        margin: 0 auto 60px;
+      }
+    }
+  }
+
+  &--centers {
+    background-color: #f9f9f9;
+    .container {
+      span {
+        margin: 0 auto 30px;
+      }
+
+      h2 {
+        margin: 0 auto 53px;
+        text-align: center;
+      }
+    }
+  }
+
+  &--blogs {
+    .container {
+      span {
+        margin: 0 auto 30px;
+      }
+
+      h2 {
+        margin: 0 auto 25px;
+      }
+
+      > p {
+        margin: 0 auto 60px;
+        max-width: 560px;
+        color: #5a7184;
+        font-family: "DM Sans";
+        font-size: 16px;
+        font-weight: 500;
+        letter-spacing: 0;
+        line-height: 26px;
+        text-align: center;
+      }
+    }
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -180,191 +151,60 @@
   margin: 0 auto;
   padding: 0 50px;
   width: 100%;
-
-  .slick-slider {
-    .slick-list {
-      padding: 50px 0;
-      .slick-track {
-        display: flex;
-        align-items: stretch;
-        .slick-slide {
-          display: flex;
-          height: auto;
-          margin: 0 12px;
-          justify-content: center;
-          & > div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            img {
-              max-width: 90%;
-              max-height: 88px;
-              width: auto !important;
-            }
-          }
-        }
-      }
-    }
-
-    .slick-arrow {
-      background-color: #fb9c00;
-      width: 65px;
-      height: 65px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      svg {
-        fill: #ffffff;
-      }
-      &:hover {
-        background-color: #fcce81;
-      }
-
-      &.prev {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-
-        left: -65px;
-      }
-
-      &.next {
-        position: absolute;
-        top: 50%;
-        right: -65px;
-        transform: translateY(-50%);
-      }
-    }
-  }
 }
 
-.center-card {
-  display: flex;
-  flex-direction: column;
-  min-height: 417px;
-  height: 100%;
-  max-width: 350px;
-  border-radius: 16px;
-  background-color: #ffffff;
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.02);
-  .center-map {
-    min-height: 180px;
-    border-radius: 16px 16px 0 0;
+.home-outlets {
+  padding: 60px 0;
+  &__logo {
     display: flex;
-    background: #5a7184;
-    position: relative;
-    overflow: hidden;
-    .map-loader {
-      min-height: 180px;
-    }
+    align-items: center;
   }
-  .center-summary {
-    padding: 32px;
-    display: flex;
-    flex-direction: column;
-    p {
-      max-height: 90px;
-      color: #5a7184;
-      font-family: "DM Sans";
-      font-size: 15px;
-      font-weight: 500;
-      letter-spacing: 0;
-      line-height: 28px;
-      overflow: hidden;
-    }
-    a {
-      margin-top: auto;
-      width: fit-content;
-      color: #fb9c00;
-      text-transform: uppercase;
-      font-family: "DM Sans";
-      font-size: 15px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
-      text-align: center;
-      svg {
-        height: 10px;
-      }
-    }
-  }
-}
-
-.blog-card {
-  box-sizing: border-box;
-  max-width: 352px;
-  height: 100%;
-  border: 1px solid #e5eaf4;
-  border-radius: 8px;
-  background-color: #ffffff;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
-
-  .blog-cover {
-    border-radius: 8px 8px 0 0;
-    min-height: 230px;
-    img {
-      border-radius: 8px 8px 0 0;
-      width: 100%;
-    }
-  }
-
-  .blog-summary {
-    padding: 30px;
-    h6 {
-      margin: 0 auto 28px;
-      color: #5a7184;
-      font-family: "DM Sans";
-      font-size: 15px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
-
-      span {
-        color: #fb9c00;
-        font-family: "DM Sans";
-        font-size: 15px;
-        font-weight: bold;
-        letter-spacing: 0;
-        line-height: 20px;
-      }
-    }
-
-    h4 {
+  .container {
+    h3 {
+      margin-bottom: 60px;
       color: #183b56;
-      font-family: "DM Sans";
+      font-family: MillerDisplay;
+      font-size: 28px;
       font-weight: bold;
       letter-spacing: 0;
-      line-height: 32px;
-    }
-
-    p {
-      max-height: 56px;
-      overflow: hidden;
-      color: #5a7184;
-      font-family: "DM Sans";
-      font-size: 15px;
-      font-weight: 500;
-      letter-spacing: 0;
-      line-height: 28px;
-    }
-
-    a {
-      margin-top: auto;
-      width: fit-content;
-      color: #fb9c00;
-      text-transform: uppercase;
-      font-family: "DM Sans";
-      font-size: 15px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 20px;
+      line-height: 44px;
       text-align: center;
-      svg {
-        height: 10px;
-      }
+    }
+    > div {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
+
+.home-footer-banner {
+  padding: 40px 0;
+  background-color: #fb9c00;
+  .container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  h2 {
+    margin-bottom: 0;
+    height: 48px;
+    width: 694px;
+    color: #ffffff;
+    font-family: MillerDisplaySemiBold;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 48px;
+  }
+  .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    svg {
+      // fill: #fb9c00;
+      // path {
+      //   fill: #fb9c00 !important;
+      // }
     }
   }
 }
