--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,16 +24,15 @@ $grid-gutter-width: 24px;
 @import "./base/variable";
 @import "./base/mixins";
 @import "./base/global";
-@import "./base/layout";
 @import "./base/typo";
 
 // component styles
 @import "../../node_modules/slick-carousel/slick/slick.css";
 @import "../../node_modules/slick-carousel/slick/slick-theme.css";
-@import "components/components";
+@import "components/shared";
+@import "components/elements";
 @import "components/navbar";
 @import "components/footer";
 
 // page styles
-@import "pages/shared";
 @import "pages/home";
