add listing page

--- a/src/styles/base/_typo.scss
+++ b/src/styles/base/_typo.scss
@@ -1,20 +1,7 @@
-@mixin font($font-family, $font-file, $font-weight) {
-  @font-face {
-    font-family: $font-family;
-    // src: url($font-file + ".eot");
-    // src: url($font-file + ".eot?#iefix") format("embedded-opentype"), url($font-file + ".woff") format("woff"),
-    //     url($font-file + ".ttf") format("truetype"), url($font-file + ".svg#" + $font-family) format("svg");
-    src: url($font-file + ".ttf") format("truetype");
-    font-weight: $font-weight;
-    font-style: normal;
-  }
-}
-
-@include font("Gilroy-Thin", "/Typo/Gilroy/Gilroy-Thin", 100);
-
 body {
-  font-family: Gilroy-Medium, sans-serif;
-  font-size: 1rem;
+  font-family: "DM Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
 h1,
 h2,
