--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -7,9 +7,9 @@
   h3 {
     margin-bottom: 16px;
     color: #183b56;
-    font-family: MillerDisplaySemiBold;
+    font-family: "Miller Display";
     font-size: 28px;
-    font-weight: bold;
+    font-weight: 600;
     letter-spacing: 0;
     line-height: 32px;
   }
@@ -115,7 +115,7 @@
       text-transform: uppercase;
       font-family: "DM Sans";
       font-size: 15px;
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 0;
       line-height: 20px;
       text-align: center;
@@ -152,7 +152,7 @@
       color: #5a7184;
       font-family: "DM Sans";
       font-size: 15px;
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 0;
       line-height: 20px;
 
@@ -160,7 +160,7 @@
         color: #fb9c00;
         font-family: "DM Sans";
         font-size: 15px;
-        font-weight: bold;
+        font-weight: 700;
         letter-spacing: 0;
         line-height: 20px;
       }
@@ -169,7 +169,7 @@
     h4 {
       color: #183b56;
       font-family: "DM Sans";
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 0;
       line-height: 32px;
     }
@@ -192,7 +192,7 @@
       text-transform: uppercase;
       font-family: "DM Sans";
       font-size: 15px;
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 0;
       line-height: 20px;
       text-align: center;
