--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,7 +3,25 @@ footer {
   padding-bottom: 108px;
   background-color: #1b1b1b;
 
-  h5,
+  .copyright {
+    opacity: 0.5;
+    color: #ffffff;
+    font-family: "DM Sans";
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 28px;
+  }
+
+  h5 {
+    color: #ffffff;
+    font-family: "DM Sans";
+    font-size: 17px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 22px;
+  }
+
   a {
     opacity: 0.5;
     color: #ffffff;
