--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -1,9 +1,32 @@
-.request-call-form {
+.call-form {
+  position: relative;
   padding: 38px 30px;
   max-width: 523px;
   border-radius: 8px;
   background-color: #ffffff;
   box-shadow: 0 15px 50px -10px rgba(21, 37, 72, 0.25);
+
+  &__input-wrapper {
+    width: calc(50% - 5px);
+    position: relative;
+    svg {
+      position: absolute;
+      top: 19px;
+      left: 15px;
+      width: 11px;
+      height: 11px;
+      path {
+        fill: #959ead;
+      }
+    }
+  }
+
+  > div {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
   h3 {
     margin-bottom: 16px;
     color: #183b56;
@@ -13,28 +36,41 @@
     letter-spacing: 0;
     line-height: 32px;
   }
-  > div {
-    margin-bottom: 20px;
-    input {
-      width: calc(50% - 5px);
-    }
-  }
-  .btn-primary {
+
+  .btn {
     width: 100%;
     height: 56px;
     text-transform: uppercase;
-  }
-  .input-outlined {
-    &::before {
-      content: "";
-      position: absolute;
-      left: 10px;
-      top: 0;
-      bottom: 0;
-      width: 20px;
-      // background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill-rule='evenodd'%3E%3Cpath d='M16.036 18.455l2.404-2.405 5.586 5.587-2.404 2.404zM8.5 2C12.1 2 15 4.9 15 8.5S12.1 15 8.5 15 2 12.1 2 8.5 4.9 2 8.5 2zm0-2C3.8 0 0 3.8 0 8.5S3.8 17 8.5 17 17 13.2 17 8.5 13.2 0 8.5 0zM15 16a1 1 0 1 1 2 0 1 1 0 1 1-2 0'%3E%3C/path%3E%3C/svg%3E") center / contain no-repeat;
+    font-family: "DM Sans";
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 20px;
+    text-align: center;
+    svg {
+      width: 12px;
+      height: 12px;
+      margin-right: 10px;
+      path {
+        fill: #ffffff;
+      }
     }
   }
+
+  .input-outlined {
+    padding-left: 32px;
+    width: 100%;
+  }
+
+  // .input-outlined::before {
+  //   content: "";
+  //   position: absolute;
+  //   left: 10px;
+  //   top: 0;
+  //   bottom: 0;
+  //   width: 20px;
+  //   background: url("/Icons/phone.svg") no-repeat;
+  // }
 }
 
 .social-links {
