--- a/src/styles/base/_typo.scss
+++ b/src/styles/base/_typo.scss
@@ -10,7 +10,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  font-family: "MillerDisplay";
+  font-family: "Miller Display";
   color: #183b56;
 }
 
@@ -63,8 +63,9 @@ h6 {
 p {
   margin-top: 0;
   font-size: 16px;
-  font-family: "Roboto-Light", sans-serif;
-  color: $color-darkblue;
+  font-family: "DM Sans", sans-serif;
+  color: #183b56;
+  line-height: 24px;
 }
 
 .text-xxl {
