--- a/src/styles/pages/_listing.scss
+++ b/src/styles/pages/_listing.scss
@@ -4,113 +4,428 @@
   padding: 77px 0;
   .container {
     height: 100%;
+    [class*="col-lg-"]:first-child {
+      padding-right: 20px;
+    }
+    [class*="col-lg-"]:last-child {
+      padding-left: 20px;
+    }
   }
-  .gallery {
+}
+
+.listing-detail {
+  padding: 60px 0 70px;
+}
+
+.gallery-wrapper {
+  margin: auto;
+  position: relative;
+  width: 100%;
+  padding-top: 66.7%;
+}
+
+.gallery {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+
+  .gallery-main {
+    position: relative;
+    width: 76%;
+    height: 100%;
+    overflow: hidden;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+    .gallery-main__actions {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      display: flex;
+      gap: 7px;
+      div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 34px;
+        width: 34px;
+        border-radius: 16px;
+        background-color: #d1d5d8;
+      }
+    }
+  }
+
+  .gallery-strip {
+    width: 22%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 
-    .gallery-main {
-      width: 76%;
-      > div {
-        position: relative;
-        width: 100%;
-        padding-top: 88%;
-        overflow: hidden;
-        img {
-          position: absolute;
-          top: 0;
-          width: 100%;
-          object-fit: contain;
-        }
-      }
-    }
-    .gallery-strip {
-      width: 22%;
+    .gallery-strip__item {
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      position: relative;
+      img {
+        width: 100%;
+      }
+      svg {
+        position: absolute;
+        height: 42px;
+        width: 42px;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+        border-radius: 1000px;
+        background-color: #ffffff;
+      }
     }
   }
+}
 
-  .location-summary {
-    margin: 0 auto 12px;
-    &__name {
-      margin-bottom: 12px;
-      display: flex;
-      align-items: center;
-      color: #183b56;
-      font-family: "Miller Display";
-      font-size: 36px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 52px;
+.location-summary {
+  margin: 0 auto 12px;
+  &__name {
+    margin-bottom: 6px;
+    display: flex;
+    align-items: center;
+    color: #183b56;
+    font-family: "Miller Display";
+    font-size: 36px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 52px;
 
-      svg {
-        margin-left: 16px;
-        border-radius: 1000px;
-      }
-      // span {
-      //   margin-bottom: auto;
-      //   // height: 32px;
-      //   // width: 68px;
-      //   // opacity: 0.2;
-      //   border-radius: 2000px;
-      //   overflow: hidden;
-      //   // background-color: #11B416;
-      // }
+    svg {
+      margin-left: 16px;
+      border-radius: 1000px;
     }
+    // span {
+    //   margin-bottom: auto;
+    //   // height: 32px;
+    //   // width: 68px;
+    //   // opacity: 0.2;
+    //   border-radius: 2000px;
+    //   overflow: hidden;
+    //   // background-color: #11B416;
+    // }
+  }
 
-    &__rating {
-      display: flex;
-      align-items: center;
-      p {
-        margin-left: 8px;
-        margin-right: 8px;
-        margin-bottom: 0;
-        color: #3a586e;
-        font-family: "DM Sans";
-        font-size: 18px;
-        font-weight: bold;
-        letter-spacing: 0;
-        line-height: 28px;
-      }
-    }
-
-    &__review-btn {
-      color: #fb9c01;
-      font-family: "Maison Neue";
-      font-size: 15px;
-      font-weight: bold;
-      letter-spacing: 0;
-      line-height: 22px;
-      text-transform: uppercase;
-
-      svg {
-        margin-right: 6px;
-        path {
-          fill: #fb9c01;
-        }
-      }
-    }
-
-    &__address {
-      color: #5a7184;
+  &__rating {
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    p {
+      margin-left: 12px;
+      margin-right: 16px;
+      margin-bottom: 0;
+      color: #3a586e;
       font-family: "DM Sans";
-      font-size: 20px;
-      font-weight: 500;
-      letter-spacing: 0;
-      line-height: 28px;
-    }
-    &__phone {
-      color: #5a7184;
-      font-family: "DM Sans";
-      font-size: 20px;
+      font-size: 18px;
       font-weight: bold;
       letter-spacing: 0;
       line-height: 28px;
       span {
-        color: #fb9c00;
+        font-weight: 500;
       }
     }
+  }
+
+  &__review-btn {
+    color: #fb9c01;
+    font-family: "Maison Neue";
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 22px;
+    text-transform: uppercase;
+
+    svg {
+      margin-right: 6px;
+      path {
+        fill: #fb9c01;
+      }
+    }
+  }
+
+  &__address {
+    color: #5a7184;
+    font-family: "DM Sans";
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 28px;
+  }
+  &__phone {
+    color: #5a7184;
+    font-family: "DM Sans";
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 28px;
+    span {
+      color: #fb9c00;
+    }
+  }
+}
+
+.pay-treatment {
+  margin-bottom: 40px;
+  padding: 30px 24px 24px;
+  box-sizing: border-box;
+  min-height: 215px;
+  max-width: 711px;
+  border: 1px solid #e5eaf4;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+
+  h3 {
+    margin-bottom: 0;
+    color: #183b56;
+    font-family: "Miller Display";
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 52px;
+  }
+
+  &__info {
+    display: flex;
+    p {
+      margin-right: 32px;
+      color: #3a586e;
+      font-family: "DM Sans";
+      font-size: 16px;
+      font-weight: 500;
+      letter-spacing: 0;
+      line-height: 28px;
+      span {
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
+  }
+
+  &__features {
+    p {
+      margin-bottom: 4px;
+      position: relative;
+      height: 36px;
+      padding-left: 33px;
+      color: #183b56;
+      font-family: "DM Sans";
+      font-size: 18px;
+      font-weight: bold;
+      letter-spacing: -0.09px;
+      line-height: 36px;
+    }
+    .on::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 6px;
+      height: 24px;
+      width: 24px;
+      background-image: url("/Icons/close-circle.svg");
+      background-repeat: no-repeat;
+    }
+    .off::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 6px;
+      height: 24px;
+      width: 24px;
+      background-image: url("/Icons/close-circle.svg");
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.treatment-detail {
+  h3 {
+    margin-bottom: 12px;
+    color: #183b56;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 52px;
+  }
+  p {
+    color: #5a7184;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: -0.08px;
+    line-height: 36px;
+  }
+
+  h5 {
+    color: #183b56;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: -0.08px;
+    line-height: 36px;
+  }
+
+  img {
+    margin-bottom: 40px;
+    width: 100%;
+    max-width: 311px;
+  }
+}
+
+.center-card {
+  margin-bottom: 20px;
+  border: 1px solid #e5eaf4;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+
+  &__header {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 12px 24px;
+    height: 61px;
+    border: 1px solid #e5eaf4;
+    border-radius: 5px 5px 0 0;
+    background-color: #f9f9f9;
+    h5 {
+      padding-left: 24px;
+      margin-bottom: 0;
+      position: relative;
+      color: #183b56;
+      font-family: "DM Sans";
+      font-size: 18px;
+      font-weight: bold;
+      letter-spacing: -0.09px;
+      line-height: 36px;
+    }
+    h5::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 8px;
+      height: 24px;
+      width: 24px;
+      background-image: url("/Icons/information-circle.svg");
+      background-repeat: no-repeat;
+    }
+  }
+
+  &__body {
+    padding: 16px 24px;
+    p {
+      margin-bottom: 6px;
+      padding-left: 36px;
+      color: #183b56;
+      font-family: "DM Sans";
+      font-weight: bold;
+      letter-spacing: -0.08px;
+      line-height: 36px;
+    }
+    p::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 8px;
+      height: 24px;
+      width: 24px;
+      background-image: url("/Icons/close-circle.svg");
+      background-repeat: no-repeat;
+    }
+  }
+
+  &__map {
+    height: 152px;
+    width: 100%;
+  }
+
+  &--feature {
+    h5::before {
+      background-image: url("/Icons/information-circle.svg");
+    }
+  }
+
+  &--detail {
+    h5::before {
+      background-image: url("/Icons/house.svg");
+    }
+  }
+
+  &--info {
+    h5::before {
+      background-image: url("/Icons/pin.svg");
+    }
+    p {
+      padding: 0;
+    }
+    button {
+      width: 100%;
+      height: 46px;
+      border-radius: 6px;
+      background-color: #fb9c00;
+      font-family: "DM Sans";
+      font-size: 15px;
+      font-weight: bold;
+      letter-spacing: 0;
+      line-height: 20px;
+      text-align: center;
+      svg {
+        width: 12px;
+        height: 12px;
+        margin-right: 10px;
+        path {
+          fill: #ffffff;
+        }
+      }
+    }
+  }
+
+  &--setting {
+    p {
+      position: relative;
+    }
+    p::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 8px;
+      height: 24px;
+      width: 24px;
+      background-image: url("/Icons/lock.svg");
+      background-repeat: no-repeat;
+    }
+  }
+
+  &--more {
+    a {
+      display: flex;
+      align-items: center;
+      svg {
+        margin-right: 10px;
+        height: 21px;
+        width: 21px;
+      }
+      span {
+        text-decoration: underline;
+        color: #183b56;
+        font-family: "DM Sans";
+        font-size: 16px;
+        font-weight: bold;
+        letter-spacing: -0.08px;
+        line-height: 36px;
+      }
+    }
+  }
+}
+
+.center-detail {
+  &__header {
   }
 }
