--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -5,33 +5,6 @@
   background-color: #ffffff;
   box-shadow: 0 15px 50px -10px rgba(21, 37, 72, 0.25);
 
-  &__input-wrapper {
-    width: calc(50% - 5px);
-    position: relative;
-    svg {
-      position: absolute;
-      top: 19px;
-      left: 15px;
-      width: 11px;
-      height: 11px;
-      path {
-        fill: #959ead;
-      }
-    }
-  }
-
-  &--home {
-    padding: 38px 30px;
-  }
-
-  &--listing {
-    padding: 26px 30px 20px;
-  }
-
-  &--listing-footer {
-    padding: 26px 30px 20px;
-  }
-
   > div {
     margin-bottom: 20px;
     display: flex;
@@ -68,9 +41,67 @@
     }
   }
 
-  .input-outlined {
-    padding-left: 32px;
-    width: 100%;
+  &__input-wrapper {
+    width: calc(50% - 5px);
+    position: relative;
+    svg {
+      position: absolute;
+      top: 19px;
+      left: 15px;
+      width: 11px;
+      height: 11px;
+      path {
+        fill: #959ead;
+      }
+    }
+    .input-outlined {
+      padding-left: 32px;
+      width: 100%;
+    }
+  }
+
+  &--home {
+    padding: 38px 30px;
+  }
+
+  &--listing {
+    padding: 26px 30px 20px;
+  }
+
+  &--listing-footer {
+    padding: 0;
+    box-shadow: none;
+    background-color: #fb9c00;
+
+    .call-form__input-wrapper {
+      position: relative;
+      svg {
+        z-index: 100;
+        path {
+          fill: #ffffff;
+        }
+      }
+      .input-outlined {
+        position: relative;
+        border-color: transparent;
+        background-color: #fcc05e;
+        // background-color: #fb9c004d;
+        color: #ffffff;
+        &::placeholder {
+          color: #ffffff;
+        }
+      }
+    }
+
+    .btn {
+      color: #fb9c00;
+      background-color: #ffffff;
+      svg {
+        path {
+          fill: #fb9c00;
+        }
+      }
+    }
   }
 }
 
@@ -292,16 +323,16 @@
 }
 
 .footer-banner {
-  padding: 40px 0;
   background-color: #fb9c00;
   .container {
-    display: flex;
-    justify-content: space-between;
+    > div {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   h2 {
     margin-bottom: 0;
-    height: 48px;
     width: 694px;
     color: #ffffff;
     font-family: "Miller Display";
@@ -332,11 +363,14 @@
     }
   }
   &--home {
+    padding: 40px 0;
   }
 
   &--listing {
+    padding: 90px 0;
     height: 441px;
     background-image: url("/Images/footer-banner2.png");
     background-repeat: no-repeat;
+    background-position: center;
   }
 }
