--- a/src/styles/pages/_listing.scss
+++ b/src/styles/pages/_listing.scss
@@ -174,6 +174,7 @@
 }
 
 .pay-treatment {
+  position: relative;
   margin-bottom: 40px;
   padding: 30px 24px 24px;
   box-sizing: border-box;
@@ -183,6 +184,15 @@
   border-radius: 5px;
   background-color: #ffffff;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+  overflow: hidden;
+
+  svg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    top: -30px;
+    right: -30px;
+  }
 
   h3 {
     margin-bottom: 0;
@@ -340,8 +350,13 @@
   }
 
   &__map {
-    height: 152px;
-    width: 100%;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    > div {
+      border-radius: 8px;
+      width: 100%;
+      height: 152px;
+    }
   }
 
   &--feature {
