--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -427,3 +427,57 @@
     background-position: center;
   }
 }
+
+.listing-card {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e5eaf4;
+  padding: 21px;
+
+  h5 {
+    color: #3a586e;
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 28px;
+  }
+
+  h3 {
+    color: #183b56;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 52px;
+  }
+
+  .btn {
+    margin-top: 30px;
+    min-width: 86px;
+    border-radius: 5px;
+  }
+
+  &__summary {
+    display: flex;
+    // > div:not(:last-child) {
+    //   margin-right: 32px;
+    // }
+
+    > div + div {
+      margin-left: 32px;
+    }
+
+    > div {
+      color: #3a586e;
+      font-family: "DM Sans";
+      font-size: 16px;
+      font-weight: 500;
+      letter-spacing: 0;
+      line-height: 28px;
+      span {
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
+  }
+}
