--- a/src/styles/pages/_listing.scss
+++ b/src/styles/pages/_listing.scss
@@ -205,7 +205,7 @@
 
   &__info {
     display: flex;
-    p {
+    div {
       margin-right: 32px;
       color: #3a586e;
       font-family: "DM Sans";
