--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,3 +39,5 @@ $grid-gutter-width: 24px;
 @import "pages/home";
 @import "pages/listing";
 @import "pages/admissions";
+@import "pages/blog";
+@import "pages/state-wip";
