--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -1,8 +1,34 @@
 .blog {
   margin: 0 auto;
-  padding: 50px 0;
   max-width: 830px;
+  display: flex;
+  flex-direction: column;
+  .btn {
+    margin: 0 auto 110px;
+    height: 56px;
+    width: 200px;
+    border-radius: 6px;
+    background-color: rgba(251, 156, 0, 0.2);
+    // background-color: #fb9c00ff;
+    color: #fb9c00;
+    font-family: "DM Sans";
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    svg {
+      margin-left: 24px;
+      width: 14px;
+      height: 14px;
+      path {
+        fill: #fb9c00;
+      }
+    }
+  }
 }
+
 .blog__summary {
   margin-bottom: 30px;
   display: flex;
@@ -35,7 +61,7 @@
 
 .blog__topic {
   margin-bottom: 40px;
-  padding: 26px 22px;
+  padding: 30px 22px;
   max-width: 832px;
   border: 1px solid #e5eaf4;
   border-radius: 5px;
@@ -108,7 +134,17 @@
     }
   }
 }
-.blog__author {
+
+.blog__writter {
+  margin-bottom: 34px;
+  padding: 30px 22px;
+  border: 1px solid #e5eaf4;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+}
+
+.blog-profile {
   > div {
     display: flex;
     gap: 20px;
@@ -124,7 +160,7 @@
   }
   &__avatar {
     img {
-      width: 151px;
+      max-width: 151px;
     }
   }
   &__description {
@@ -146,6 +182,16 @@
       font-weight: 500;
       letter-spacing: 0;
       line-height: 28px;
+    }
+  }
+
+  &--author {
+  }
+  &--editor {
+    width: 50%;
+    img {
+      height: 100px;
+      width: 100px;
     }
   }
 }
