--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,8 +1,13 @@
 .navbar {
+  position: relative;
+  width: 100%;
   padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   .logo {
     height: 52px;
-    width: 220px;
+    max-width: 220px;
     color: #000000;
     font-family: "Miller Display";
     font-size: 30px;
@@ -11,9 +16,11 @@
     line-height: 52px;
   }
   .navbar-nav {
+    display: flex;
     .nav-item {
       display: flex;
       a {
+        position: relative;
         padding: 16px 18px;
         color: #5a7184;
         font-family: "DM Sans";
@@ -21,8 +28,23 @@
         font-weight: 500;
         letter-spacing: 0;
         text-align: center;
-
         line-height: 21px;
+        &:after {
+          position: absolute;
+          margin: auto;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          width: 0;
+          content: ".";
+          color: transparent;
+          background-color: #fb9c00;
+          transition: all 0.3s;
+          height: 3px;
+        }
+        &:hover:after {
+          width: 100%;
+        }
       }
     }
   }
@@ -48,6 +70,65 @@
       path {
         fill: #ffffff;
       }
+    }
+  }
+  .toggler {
+    display: none;
+    padding: 8px;
+    cursor: pointer;
+    svg {
+      width: 30px;
+      height: 30px;
+      path {
+        fill: #fb9c00;
+      }
+    }
+  }
+  @include media-breakpoint-down(lg) {
+    .navbar-nav {
+      .nav-item {
+        a {
+          padding: 16px 12px;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-down(md) {
+    .navbar-nav {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px;
+      top: 92px;
+      right: 0;
+      width: 100%;
+      background: #fff;
+      overflow: hidden;
+      border-left: 1px solid #e5eaf4;
+      border-right: 1px solid #e5eaf4;
+      border-bottom: 1px solid #e5eaf4;
+      background-color: #ffffff;
+      box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+
+      transition: all ease-in-out 0.3s;
+      &.show {
+        height: 320px;
+      }
+      &.hidden {
+        height: 0;
+      }
+      .nav-item {
+        a {
+          margin: auto;
+        }
+      }
+    }
+    .btn {
+      margin-left: auto;
+      margin-right: 20px;
+    }
+    .toggler {
+      display: flex;
     }
   }
 }
