--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -62,56 +62,56 @@
 
 .blog__topic {
   margin-bottom: 40px;
-  padding: 30px 22px;
+  padding: 30px 22px 20px;
   max-width: 832px;
   border: 1px solid #e5eaf4;
   border-radius: 5px;
   background-color: #f9f9f9;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
   h5 {
+    margin-bottom: 20px;
     color: #183b56;
     font-family: "DM Sans";
     font-size: 18px;
     font-weight: bold;
     letter-spacing: -0.09px;
-    line-height: 36px;
+    line-height: 1;
   }
-
-  ul {
+  > div {
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
-    flex-flow: column wrap;
-    height: 80px;
-    list-style-type: none;
-    padding-left: 0;
-    li {
+    a {
+      min-width: 260px;
       margin-bottom: 12px;
       padding-left: 12px;
       position: relative;
+      color: #183b56;
+      font-family: "DM Sans";
+      font-size: 16px;
+      font-weight: 500;
+      letter-spacing: -0.08px;
+      text-decoration: underline;
     }
-    li::before {
+    a::before {
       content: "•";
       position: absolute;
       left: 0;
       top: 0;
     }
   }
-
-  a {
-    color: #183b56;
-    font-family: "DM Sans";
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: -0.08px;
-  }
 }
 
 .blog__content {
   h3 {
+    margin-bottom: 10px;
     color: #183b56;
     font-weight: bold;
     letter-spacing: 0;
     line-height: 52px;
+  }
+  p + h3 {
+    margin-top: 36px;
   }
   h4 {
     color: #183b56;
@@ -134,6 +134,10 @@
       text-decoration: underline;
     }
   }
+  > img {
+    margin: 30px 0;
+    width: 100%;
+  }
 }
 
 .blog__writter {
@@ -143,12 +147,27 @@
   border-radius: 5px;
   background-color: #f9f9f9;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.08);
+  > div {
+    display: flex;
+  }
+  @include media-breakpoint-down(sm) {
+    > div {
+      flex-direction: column;
+      .blog-profile {
+        width: 100%;
+      }
+      > div + div {
+        margin-top: 20px;
+      }
+    }
+  }
 }
 
 .blog-profile {
+  display: flex;
+  flex-direction: column;
   > div {
     display: flex;
-    gap: 20px;
   }
   h5 {
     margin-bottom: 20px;
@@ -157,9 +176,10 @@
     font-size: 18px;
     font-weight: bold;
     letter-spacing: -0.09px;
-    line-height: 36px;
+    line-height: 20px;
   }
   &__avatar {
+    margin-right: 20px;
     img {
       max-width: 151px;
     }
@@ -186,13 +206,52 @@
     }
   }
 
-  &--author {
+  &__contact {
+    display: flex;
+    a:first-child {
+      margin-right: 40px;
+    }
+    a {
+      display: flex;
+      align-items: center;
+      color: #5a7184;
+      font-size: 14px;
+      font-weight: 500;
+      letter-spacing: 0;
+      line-height: 18px;
+    }
+    svg {
+      margin-right: 6px;
+      height: 16px;
+      width: 16px;
+    }
   }
+
+  &--author {
+    margin-bottom: 35px;
+  }
+
   &--editor {
     width: 50%;
     img {
       height: 100px;
       width: 100px;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    &__contact {
+      flex-direction: column;
+      a:first-child {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  @include media-breakpoint-down(xs) {
+    &--author {
+      > div {
+        flex-direction: column;
+      }
     }
   }
 }
