--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 1000;
   .logo {
     height: 52px;
     max-width: 220px;
