--- a/src/styles/components/_shared.scss
+++ b/src/styles/components/_shared.scss
@@ -7,6 +7,7 @@
   background-size: cover;
 
   &--home {
+    padding: 100px 0;
     min-height: 640px;
     background-image: url("../assets/Banners/hero1.png");
     > .container {
@@ -16,15 +17,17 @@
   }
 
   &--admissions {
+    padding: 100px 0;
     min-height: 691px;
     background-image: url("../assets/Banners/hero2.png");
     > .container {
-      margin-top: 107px;
+      margin-top: auto;
       margin-bottom: auto;
     }
   }
 
   &--blog {
+    padding: 100px 0;
     margin-bottom: 50px;
     min-height: 640px;
     background-image: url("../assets/Banners/hero3.png");
@@ -70,6 +73,9 @@
         }
       }
     }
+  }
+  @include media-breakpoint-down(sm){
+    padding: 50px 0;
   }
 }
 
